--- a/views/common/register.html
+++ b/views/common/register.html
@@ -41,7 +41,7 @@
                 data: $(this).serialize(),
                 dataType: 'json',
                 success: function(data) {
-                    window.location.href = '/login'
+                    window.location.href = '/common/login'
                 },
                 error: function() {
                     console.log(1);
