--- a/views/company/factoryMain.html
+++ b/views/company/factoryMain.html
@@ -18,17 +18,14 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
                     <ul class="nav navbar-nav">
                         <li><a href="#">欢迎来到同城家教</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/common/logout">退出</a></li>
                         <li><a href="/company/require">招聘要求</a></li>
-
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -44,7 +41,6 @@
             <input type="text">
             <button>搜索</button>
         </div>
-
     </div>
     <!--search部分结束-->
     <!-- main部分开始 -->
@@ -57,16 +53,13 @@
                     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 </ol>
-
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
                         <img src="/public/images/家教1.png" alt="...">
                         <div class="carousel-caption">
                             <div class="item">
-
                                 <h3>同城家教</h3>
-
                             </div>
                         </div>
                     </div>
@@ -83,9 +76,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <!-- Controls -->
                 <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -96,14 +86,11 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-
         </div>
-
     </div>
     <!-- main部分结束 -->
-
     <div class="container">
-        <div class="qz-lb">
+        <div class="qz-lb" id="teacherList">
             <dl class="cl row">
                 <dt class='col-lg-2'>求职意向</dt>
                 <dd class='col-lg-1'>姓名</dd>
@@ -114,78 +101,6 @@
                 <dd class='col-lg-2'>期望薪资</dd>
                 <dd class='col-lg-1'></dd>
             </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="/company/comDetail">详情</a></dd>
-            </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="">详情</a></dd>
-            </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="">详情</a></dd>
-            </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="">详情</a></dd>
-            </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="">详情</a></dd>
-            </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="">详情</a></dd>
-            </dl>
-            <dl>
-                <dt class='col-lg-2'><a href="">高级数学教师</a></dt>
-                <dd class='col-lg-1'>张峰</dd>
-                <dd class='col-lg-1'>女</dd>
-                <dd class='col-lg-2'>1970-01-04</dd>
-                <dd class='col-lg-2'>10年以上</dd>
-                <dd class='col-lg-1'>本科</dd>
-                <dd class='col-lg-2'>20000</dd>
-                <dd class='col-lg-1'><a href="">详情</a></dd>
-            </dl>
-
-
         </div>
     </div>
     <!-- footer部分开始 -->
@@ -202,7 +117,6 @@
         </div>
         <p class="container">
             <strong class="b-title">中国家教招聘相关分类：</strong>
-
             <a href="http://zhaopin.liebiao.com/jiaoshi/">教师/助教招聘</a>
             <a href="http://zhaopin.liebiao.com/jiajiaolaoshi/">家教招聘</a>
             <a href="http://zhaopin.liebiao.com/youerjiaoshi/">幼教招聘</a>
@@ -214,7 +128,6 @@
             <a href="http://zhaopin.liebiao.com/jykeyuanrenyuan/">学术研究/科研招聘</a>
             <a href="http://zhaopin.liebiao.com/jyzhaosheng/">招生/课程顾问招聘</a>
             <a href="http://zhaopin.liebiao.com/xiaozhang/">校长招聘</a>
-
         </p>
         <p class="container">
             <strong class="b-title">热点城市家教招聘分类：</strong>
@@ -245,5 +158,6 @@
 </body>
 <script src="/public/assets/jquery/jquery.js"></script>
 <script src="/public/assets/bootstrap/js/bootstrap.js"></script>
+<script src="/public/js/company/companyMain.js"></script>
 
 </html>
