--- a/views/applicant/detail.html
+++ b/views/applicant/detail.html
@@ -55,73 +55,7 @@
                 </div>
                 <div class="main-l">
                     <div class="detail-con" style="margin-top:0">
-                        <div style=" margin:0 auto; width:780px;">
-                            <div class="infoTitle-zp">
-                                <div class="title-time">
-                                    <h1 class="detail-title">招聘有经验的语文老师</h1>
-                                    <div class="title-bot"><span class="tb-other">2017-03-30</span>
-
-                                    </div>
-                                </div>
-                                <div class="companyInfo-zp">
-                                    <span class="companyName"><a href="#" target="_blank">南京名思堂教育信息咨询有限公司江阴分公司</a></span>
-
-                                    <span class="companyIcon"><span class="nozhizhao_rz" style="margin-left:5px;" title="营业执照未认证"></span>
-                                    </span>
-
-                                </div>
-                                <div class="companyOther">
-                                    <span>公司行业：教育/科研/培训</a></span>
-                                    <span>公司性质：私营</span>
-                                    <span>公司规模：1-49人</span>
-                                </div>
-                            </div>
-
-                            <div class="detail-table clearfix" style="margin-top:10px;">
-                                <dl class="fl">
-                                    <dt>
-                                    <ul>
-                                        <li>薪资待遇：面议</li>
-                                    </ul>
-                                </dt>
-                                    <dd>
-                                        <ul>
-                                            <li>学历要求：本科</li>
-                                            <li>招聘人数：5人</li>
-                                        </ul>
-                                    </dd>
-                                    <dd>
-                                        <ul>
-                                            <li>工作年限：不限</li>
-                                        </ul>
-                                    </dd>
-                                    <dd>
-                                        联系方式：2394359569
-                                    </dd>
-                                </dl>
-
-                            </div>
-                            <div class="applyJob">
-                                <a class="sq-submiter" href="javascript:void(0);" onclick="applyWork(25997067);">立即申请</a>
-                            </div>
-
-                            <div class="about-zp">
-                                <ul class='about-dh'>
-                                    <li class="current">职位描述</li>
-                                    <!--<li>公司其他职位</li>-->
-                                </ul>
-                                <div class="about-lr">
-                                    <div>
-                                        <div>岗位介绍： <br /> 1、负责语文日常的辅导工作和专业的​‌‌1对1教学，帮助学生克服学习难点，改掉不良学习习惯 <br /> 岗位要求： <br /> 1、表达能力优秀，普通话标准，思维灵活，富有亲和力，有耐心，有责任心，有师德，擅长与学生进行沟通交流 <br /> 2、有教师资格证者优先 <br /> 3、有授课、辅导、家教经验、学校教学经验或培训机构任教者优先 <br /> 工作时间: <br /> 周二至周五13：00-21：00
-                                            <br /> 周六至周日8：00-17：00
-                                        </div>
-                                        <div class="abouts-c">
-                                            <p class="dt">公司介绍</p>
-                                            <div class="">名思教育集团成立于2003年，是一家专门从事中小学生课外辅导的大型教育机构，拥有科学的教育体系、优秀的教师队伍和先进的管理团队，从早期的教育软件开发、“一对多”辅导发展到今天“优秀教师一对一”个性化辅导。名思教育在全国拥有100多个个性化学习中心，目前已经在南京、合肥、无锡、常州、南通、芜湖、马鞍山、江阴、宜兴、镇江、张家港、嘉兴、桐乡、湖州、绍兴等40多个城市设立学习中心。名思教育坚持请最有实力的教师，运用最先进的教育理念，最科学的教育模式竭诚为中小学生提供优质的教育服务。</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div style=" margin:0 auto; width:780px;" id="companyDetail">
                         </div>
                     </div>
                 </div>
@@ -193,5 +127,7 @@
     </footer>
 
 </body>
+<script src="/public/assets/jquery/jquery.js"></script>
+<script src="/public/js/applicant/detail.js"></script>
 
 </html>
