--- a/public/css/company/comDetail.css
+++ b/public/css/company/comDetail.css
@@ -67,6 +67,7 @@
     padding: 0 30px;
     border-radius: 5px 5px 5px 5px;
     border: 1px solid #dd8722;
+    background: #00B2EE;
     cursor: pointer;
 }
 
