--- a/views/applicant/main.html
+++ b/views/applicant/main.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/public/css/applicant/main.css">
     <!--header部分开始-->
     <header>
-        <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=787644040&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:787644040:52" alt="点击这里给我发消息" title="点击这里给我发消息" /></a>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -25,7 +24,7 @@
                             <a href="/common/register" class="btn ">注册</a>
                         </form>
                         <li><a href="/common/logout">退出</a></li>
-                        <li><a href="/applicant/resume">简历</a></li>
+                        <li><a href="/applicant/resume" id="resume">简历</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
