--- a/views/company/factoryMain.html
+++ b/views/company/factoryMain.html
@@ -25,7 +25,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/common/logout">退出</a></li>
-                        <li><a href="/company/require">招聘要求</a></li>
+                        <li><a href="/company/require" id="require">招聘要求</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
