--- a/views/applicant/resume.html
+++ b/views/applicant/resume.html
@@ -45,14 +45,14 @@
                             <b class="must-Symbol">*</b>
                             <span class="com-title">出生年份</span>
                             <div class="com-select selects clear">
-                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="dateOfBirth" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
+                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="dateOfBirth" value="2017-04-15" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
                             </div>
                             <div id="dateBirInfo" class="ErrorInfo"></div>
                         </li>
                         <li class="workTime cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">工作年限</span>
-                            <select name="" id="" value="期望薪资" class="select">
+                            <select name="workingLife" id="" value="期望薪资" class="select">
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>无经验</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>1年以下</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>1-2年</a></option>
@@ -64,7 +64,7 @@
                         <li class="salary cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">期望薪资</span>
-                            <select name="" id="" value="期望薪资" class="select">
+                            <select name="salaryExpecation" id="" value="期望薪资" class="select">
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>面议</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>1000元以下</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>1000-2000元</a></option>
@@ -80,7 +80,7 @@
                         <li class="education cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">最高学历</span>
-                            <select name="" id="" value="期望薪资" class="select">
+                            <select name="education" id="" value="期望薪资" class="select">
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>高中以下</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>高中</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>中专</a></option>
@@ -117,7 +117,7 @@
                         <li class="self cate-list">
                             <span class="com-title">工作经历</span>
                             <div class="self-wrap">
-                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500" name="selfIntroduction"></textarea>
+                                <textarea class="self-content" id="txtIntrodSelf" maxlength="500" name="workExperience"></textarea>
                             </div>
                         </li>
                     </ul>
