--- a/views/administrator/add.html
+++ b/views/administrator/add.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>学IT - 后台管理系统</title>
+    <title>同城家教用户管理</title>
     <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/less/index.css">
 </head>
