--- a/public/css/common/login.css
+++ b/public/css/common/login.css
@@ -2,24 +2,24 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #eee;
-  }
-  
-  .form-signin {
+}
+
+.form-signin {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
-  }
-  
-  .form-signin .form-signin-heading,
-  .form-signin .checkbox {
+}
+
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
     margin-bottom: 10px;
-  }
-  
-  .form-signin .checkbox {
+}
+
+.form-signin .checkbox {
     font-weight: normal;
-  }
-  
-  .form-signin .form-control {
+}
+
+.form-signin .form-control {
     position: relative;
     height: auto;
     -webkit-box-sizing: border-box;
@@ -27,21 +27,37 @@ body {
     box-sizing: border-box;
     padding: 10px;
     font-size: 16px;
-  }
-  
-  .form-signin .form-control:focus {
+}
+
+.form-signin .form-control:focus {
     z-index: 2;
-  }
-  
-  .form-signin input[type="email"] {
+}
+
+.form-signin input[type="email"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
     margin-bottom: 10px;
-  }
-  
-  .form-signin input[type="password"] {
+}
+
+.form-signin input[type="password"] {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-  }
+}
+
+#select {
+    width: 300px;
+    height: 44px;
+    margin: 10px 0;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.error {
+    display: none;
+    color: red;
+    /*margin: 10px 0;*/
+    height: 30px;
+    padding: 0;
+}
