--- a/views/applicant/main.html
+++ b/views/applicant/main.html
@@ -6,25 +6,28 @@
     <title>同城家教首页</title>
     <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/public/css/common/base.css">
+    <link rel="stylesheet" href="/public/css/lrtk.css">
     <link rel="stylesheet" href="/public/css/applicant/main.css">
+
     <!--header部分开始-->
     <header>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="#">欢迎来到同城家教</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <form class="navbar-form navbar-left">
-                            <a href="/common/login" class="btn ">登陆</a>
-                            <a href="/common/register" class="btn ">注册</a>
-                        </form>
-                        <li><a href="/common/logout">退出</a></li>
-                        <li><a href="/applicant/resume" id="resume">简历</a></li>
+                        <% if (!isLogin) { %>
+                            <form class="navbar-form navbar-left">
+                                <a href="/common/login" class="btn btn-primary">登录</a>
+                                <a href="/common/register" class="btn btn-success">注册</a>
+                            </form>
+                            <% } %>
+                                <li><a href="/common/logout">退出</a></li>
+                                <li><a href="/company/require" id="require">招聘要求</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -82,6 +85,42 @@
         </div>
     </div>
     <!-- main部分结束 -->
+    <script src='/public/js/cs_q.js'>
+    </script>
+    <div id="qq_icon"></div>
+    <div id="cs_online">
+        <ul class='qq_context'>
+            <li>
+                <span class='span_t'>在线客服01：</span>
+                <span class='qq_num'></span>
+            </li>
+            <li>
+                <span class='span_t'>在线客服02：</span>
+                <span class='qq_num'></span>
+            </li>
+            <li>
+                <span class='span_t'>在线客服03：</span>
+                <span class='qq_num'></span>
+            </li>
+            <li>
+                <span class='span_t'>在线客服04：</span>
+                <span class='qq_num'></span>
+            </li>
+            <li>
+                <span class='span_t'>在线客服05：</span>
+                <span class='qq_num'></span>
+            </li>
+        </ul>
+    </div>
+    <script type="text/javascript">
+        myEvent(window, 'load', function() {
+            dealy('qq_icon', 1); //1秒后显示QQ图标，默认为1秒，可自行设置
+            settop('qq_icon', 'cs_online', 150); //设置在线客服的高度，默认150，可自行设置
+            var span_q = getbyClass('cs_online', 'qq_num');
+            setqq(span_q, ['812118541', '787644040', '147430218', '147430218', '147430218']); //填写5个QQ号码
+            click_fn('qq_icon', 'cs_online');
+        });
+    </script>
     <!-- content start -->
     <div class="content container">
         <div class="content-top">
@@ -98,6 +137,34 @@
     </div>
     <!-- content end -->
     <!-- footer部分开始 -->
+    <div class="community container">
+        <div class="c-content w clearfix">
+            <div class="one">
+                <div class="pack">
+                    <div class=father><img src="/public/images/72.jpg" alt=""></div>
+                    <div>
+                        <p><a href="/news/news1">【热点】“为了孩子好”背后是父母的贪婪或面子!</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="two">
+                <div class="pack">
+                    <div class=father><img src="/public/images/75.jpg" alt=""></div>
+                    <div>
+                        <p><a href="/news/news2">【热点】读书和不读书，过的是不一样的人生！</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="three">
+                <div class="pack">
+                    <div class=father><img src="/public/images/58.jpg" alt=""></div>
+                    <div>
+                        <p><a href="/news/news3">【热点】教育孩子给思维给理念才是上策！</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <div id="right_noborder" class="foot_info container">
             <p class="right_channel">中国家教人才招聘频道介绍：欢迎您访问中国人才网的 . 中国 . 家教 .招聘频道。中国招聘频道免费为中国家教的人才和招聘单位提供家教招聘信息查询和发布服务，是寻找和发布中国家教人才求职和招聘信息的最佳专业的人才网站。欢迎提出宝贵的意见。最新中国家教人才招聘信息：1.招聘有经验的语文老师2.6000急聘会英语住家家教和早教师3.招聘初高中各科兼职老师4.高新诚聘辅导教师5.招聘围棋象棋兼职老师 移动终端请访问<a href="http://m.liebiao.com/_zhaopin/jiajiaolaoshi/">家教招聘</a>移动版</p>
@@ -178,5 +245,7 @@
     <script src="/public/assets/unslider/unslider.min.js"></script>
     <script src="/public/js/main.js"></script>
     </body>
+
+</html>
 
 </html>
