--- a/views/company/require.html
+++ b/views/company/require.html
@@ -10,6 +10,31 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">欢迎来到同城家教</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if (!isLogin) { %>
+                            <form class="navbar-form navbar-left">
+                                <a href="/common/login" class="btn btn-primary">登录</a>
+                                <a href="/common/register" class="btn btn-success">注册</a>
+                            </form>
+                            <% } %>
+                                <li><a href="/common/logout">退出</a></li>
+                                <li><a href="/company/require" id="require">招聘要求</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+    </header>
     <div class="header">
         <a class="logoImg" id="" href="#">
             <p class="inspan1">同城家教</p>
@@ -30,7 +55,7 @@
                             <b class="must-Symbol">*</b>
                             <span class="com-title">招聘职位</span>
                             <div class="com-select selects clear">
-                                <input type="text" data-required data-description='dateBir' data-describedby='dateBirInfo' class="dateBir" name="releaseDate" data-date-language='zh-CN' data-provide='datepicker' data-date-end-date='0d' data-date-format='yyyy-mm-dd'>
+                                <input type="text" class="dateBir">
                             </div>
                             <div id="dateBirInfo" class="ErrorInfo"></div>
                         </li>
