--- a/views/applicant/main.html
+++ b/views/applicant/main.html
@@ -27,7 +27,7 @@
                             </form>
                             <% } %>
                                 <li><a href="/common/logout">退出</a></li>
-                                <li><a href="/company/require" id="require">招聘要求</a></li>
+                                <li><a href="/company/require" id="resume">简历</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
