--- a/views/common/register.html
+++ b/views/common/register.html
@@ -17,7 +17,7 @@
             <input name="email" type="email" class="form-control" placeholder="邮箱" required autofocus id="email">
             <input name="password" type="password" class="form-control" placeholder="密码" required>
             <input name="username" type="text" id="inputPassword" class="form-control" placeholder="昵称" required>
-            <select name="type" id="select">
+            <select name="type" id="select" value="type">
                 <option value="1">应聘者</option>
                 <option value="2">公司招聘者</option>
                 <!--<option value="3">管理员</option>-->
