--- a/views/company/require.html
+++ b/views/company/require.html
@@ -42,7 +42,7 @@
         <h2 class="title">您正在创建招聘要求...</h2>
     </div>
     <div class="main">
-        <form name="" id="resumeId" enctype="multipart/form-key">
+        <form name="" id="requireId" enctype="multipart/form-key">
             <div class="base">
                 <div class="base-title clear">
                     <i class="icon-base icon"></i>
@@ -55,7 +55,7 @@
                             <b class="must-Symbol">*</b>
                             <span class="com-title">招聘职位</span>
                             <div class="com-select selects clear">
-                                <input type="text" class="dateBir">
+                                <input type="text" class="dateBir" name="positionName">
                             </div>
                             <div id="dateBirInfo" class="ErrorInfo"></div>
                         </li>
@@ -77,19 +77,19 @@
                         <li class="name cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">公司性质</span>
-                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="username" value="">
+                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="CompanyNature" value="">
                             <div id="tcNameInfo" class="ErrorInfo"></div>
                         </li>
                         <li class="name cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">公司规模</span>
-                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="username" value="">
+                            <input type="text" data-required data-description='tcName' data-describedby='tcNameInfo' class="com-input" id="txtUserName" name="companySize" value="">
                             <div id="tcNameInfo" class="ErrorInfo"></div>
                         </li>
                         <li class="workTime cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">学历要求</span>
-                            <select name="" id="" class="select">
+                            <select name="" id="" class="select" name="education">
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>无要求</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>高中以上</a></option>
                                 <option><a href="javascript:void(0);" class="select-option" value='0'>专科以上</a></option>
@@ -122,7 +122,7 @@
                         <li id="notAuthTel" class="tel cate-list">
                             <b class="must-Symbol">*</b>
                             <span class="com-title">联系地址</span>
-                            <input type="text" data-required data-description='tel' data-describedby='telInfo' class="com-input" maxlength="11" name="phone" id="txtMobile" value="">
+                            <input type="text" data-required data-description='tel' data-describedby='telInfo' class="com-input" maxlength="11" name="contactAddress" id="txtMobile" value="">
                             <div id="telInfo" class="ErrorInfo"></div>
                         </li>
                     </ul>
